--- a/compose.cl.yaml
+++ b/compose.cl.yaml
@@ -1,25 +1,10 @@
 services:
-  db:
-    image: postgis/postgis
-    restart: always
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - commute-analyzer-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   api:
     build:
       context: .
       dockerfile: Dockerfile.api
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable
+      DATABASE_URL: ${DATABASE_URL}
       ORS_API_KEY: ${ORS_API_KEY}
       SRV_ADDR: :8080 
       SRV_ENV: prod
@@ -32,6 +17,3 @@ services:
         VITE_API_URL: /api/v1
     environment:
       BACKEND_URL: http://api:8080
-
-volumes:
-  commute-analyzer-data:
